Fix background on dark mode

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -48,7 +48,7 @@
     & {
       --fpc-text-color: #{b.$gray-100};
       --fpc-muted-text-color: #{b.$gray-300};
-      --fpc-background-color: #{b.$gray-900};
+      --fpc-background: #{b.$gray-900};
       --fpc-bright-background: #{b.$black};
     }
   }
